Rollback change for z-index so the modal looks correct Validated Autosuggest dropdown, it looks ok AB#72339

--- a/src/Orckestra.Composer.Website/UI.Package/Sass/Custom/_header.scss
+++ b/src/Orckestra.Composer.Website/UI.Package/Sass/Custom/_header.scss
@@ -33,7 +33,7 @@
 
 .masthead {
     position: relative;
-    z-index: 1099;
+    z-index: 1030;
     top: 0;
     transition: top .5s ease-in-out;
 
